[package]
name = "bevy_procedural_gen"
version = "0.1.0"
authors = ["Jerahmeel Cosinas <jcosinas@liberty.com.au>"]
repository = "https://github.com/sanisoclem/bevy_procedural_gen"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.6.0"
bevy = { git = "https://github.com/bevyengine/bevy", branch = "master" }